[SQUASH][REBASE] f2fs-tools: v1.4.0 from korg
This commit should not be merged, simply here for easy picking/testing.
We should replace our current branch with: https://github.com/invisiblek/android_external_f2fs-tools/commits/cm-11.0

Change-Id: Ib1136d977fd321ba1fc1c847d576818449632ab5

--- a/README
+++ b/README
@@ -11,6 +11,7 @@ Your should install the following packages.
  - libuuid-devel or uuid-dev
  - pkg-config
  - autoconf
+ - libtool
 
 Initial compilation
 -------------------
@@ -23,6 +24,20 @@ How to compile
 --------------
 
  # ./configure
+ # make
+
+How to cross-compile (e.g., for ARM)
+------------------------------------
+
+ 1. Add the below line into mkfs/Makefile.am:
+ mkfs_f2fs_LDFLAGS = -all-static
+
+ 2. Add the below line into fsck/Makefile.am:
+ fsck_f2fs_LDFLAGS = -all-static
+
+ 3. then, do:
+ # LDFLAGS=--static ./configure \
+	--host=arm-none-linux-gnueabi --target=arm-none-linux-gnueabi
  # make
 
 How to run by default
