--- a/README
+++ b/README
@@ -7,7 +7,7 @@ with this utilility. Otherwise, you cannot mount f2fs.
 Before compilation
 ------------------
 
-Your should install the following packages.
+You should install the following packages.
  - libuuid-devel or uuid-dev
  - pkg-config
  - autoconf
